[build-system]
requires = [
    "setuptools >= 61.0",
    "cffi >= 1.0.0",
]
build-backend = "setuptools.build_meta"

[project]
name = "textworld"
dynamic = ["version", "optional-dependencies", "dependencies", "readme"]
requires-python = ">=3.9"

#[tool.cibuildwheel]
#test-extras = ["full"]
#test-requires = "pytest"
#test-command = "pytest {project}/tests {project}/textworld"
#skip = ["pp*", "*-win*", "*_i686", "*-musllinux*"]
